[package]
name = "cargo-notify"
version = "0.1.0"
authors = ["Nikhil Mitra"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "^3"
cargo_metadata = "^0.9"

[dependencies.semver]
version = "0.9"
features = ["serde"]

[dependencies.serde]
version = "1.0.79"

[dependencies.serde_derive]
version = "1.0.79"

[dependencies.serde_json]
version = "1.0.1"

[dev-dependencies.clap]
version = "2.26.0"

[dev-dependencies.docopt]
version = "1.0.2"

[dev-dependencies.structopt]
version = "0.2.10"

[features]
default = []
